--- a/README.adoc
+++ b/README.adoc
@@ -6,12 +6,13 @@ For installing the https://docs.aws.amazon.com/systems-manager/latest/userguide/
 
 == Installation
 
-Now part of https://github.com/Homebrew/homebrew-cask/blob/master/Casks/session-manager-plugin.rb[Hombrew Cask].
-
-Install with brew: 
-
-`brew cask install session-manager-plugin`
+. `brew tap dkanejs/aws-session-manager-plugin`
+. `brew install aws-session-manager-plugin`
 
 You can verify installation by running:
 
 `session-manager-plugin`
+
+== Notes
+
+A Cask version of this plugin is also availible as a Cask in https://github.com/Homebrew/homebrew-cask/blob/master/Casks/session-manager-plugin.rb[homebrew-cask].
