--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,9 @@
 = Homebrew AWS Session Manager plugin
 
+= Deprecated
+
+USE: https://formulae.brew.sh/cask/session-manager-plugin
+
 == Description
 
 For installing the https://docs.aws.amazon.com/systems-manager/latest/userguide/session-manager-working-with-install-plugin.html#install-plugin-configure-logs[AWS session manager plugin] for AWS CLI with https://github.com/Homebrew/brew[Homebrew]
